objects/parent4__c.object
<CustomObject>
    <fields>
        <fullName>EmailId__c</fullName>
        <label>EmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Establishment__c</fullName>
        <label>Establishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Natonality__c</fullName>
        <label>Natonality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Profit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>companyName__c</fullName>
        <label>companyName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>phonenumber__c</fullName>
        <label>phonenumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>servicetype__c</fullName>
        <label>servicetype</label>
        <picklist>
            <picklistValues>
                <fullName>global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>parent4</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>parent4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parent4s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>